--- a/cli/package.json
+++ b/cli/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@inquirer/prompts": "^4.3.2",
     "chalk": "^5.3.0",
-    "commander": "^12.0.0"
+    "commander": "^12.0.0",
+    "ora": "^8.0.1"
   }
 }
