--- a/cli/package.json
+++ b/cli/package.json
@@ -22,6 +22,7 @@
     "@inquirer/prompts": "^4.3.2",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
+    "dotenv": "^16.4.5",
     "inquirer": "^9.2.17",
     "ora": "^8.0.1"
   }
