--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "firebase": "^10.11.0",
+    "install": "^0.13.0",
+    "npm": "^10.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
