--- a/cli/package.json
+++ b/cli/package.json
@@ -8,22 +8,25 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "link-cli": "(npm unlink caramel-cli || true) && chmod +x ./dist/index.js && npm link",
-    "dev": "tsc -w"
+    "link-cli": "tsc && (npm unlink caramel-cli || true) && chmod +x ./dist/index.js && npm link",
+    "compile": "tsc"
   },
-  "author": "",
+  "author": "Namık Kemal",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.5",
     "typescript": "^5.4.4"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.7.1",
     "@inquirer/checkbox": "^2.2.2",
     "@inquirer/prompts": "^4.3.2",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "dotenv": "^16.4.5",
-    "inquirer": "^9.2.17",
-    "ora": "^8.0.1"
+    "firebase": "^10.9.0",
+    "inquirer": "^8.2.6",
+    "ora": "^8.0.1",
+    "uuid": "^9.0.1"
   }
 }
