--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -13,6 +13,7 @@
     "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+    "allowJs": false
   },
 }
